[gd_scene load_steps=3 format=3 uid="uid://daf60j6sweob0"]

[ext_resource type="Script" path="res://scenes/default_item_ui.gd" id="1_8o5o5"]
[ext_resource type="Theme" uid="uid://dk7uv5eu7v20q" path="res://themes/ArtivactVR.tres" id="2_eskbx"]

[node name="DefaultItemUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_eskbx")
script = ExtResource("1_8o5o5")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(1024, 600)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Title"
horizontal_alignment = 1

[node name="DescriptionMargin" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_bottom = 75

[node name="DescriptionLabel" type="Label" parent="PanelContainer/VBoxContainer/DescriptionMargin"]
layout_mode = 2
text = "Description"

[node name="CategoryMarginLeft" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 5

[node name="CategoryPropertiesTabContainer" type="TabContainer" parent="PanelContainer/VBoxContainer/CategoryMarginLeft"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer"]
layout_mode = 2
